--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/copilot-20260112-232719-96x96.png" type="image/x-icon">
-  <meta name="description" content="Detrix IT Company - Soluții software și consultanță digitală.">
-  
   <title>Home - Detrix IT Company</title>
   
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
@@ -18,80 +16,40 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=82VRtS" type="text/css">
 </head>
 <body>
-  
+
   <header class="menu menu2 cid-tJS6tZXiPa" id="menu02-0">
-	<nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-		<div class="container">
-			<div class="navbar-brand">
-				<span class="navbar-logo">
-					<a href="index.html">
-						<img src="assets/images/copilot-20260112-232719-96x96.png" alt="Dertix IT Logo" style="height: 3rem;">
-					</a>
-				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="index.html#top">Detrix IT Company</a></span>
-			</div>
-			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="hamburger">
-					<span></span>
-					<span></span>
-					<span></span>
-					<span></span>
-				</span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav nav-dropdown nav-right">
-                    <li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header05-1">Despre noi</a></li>
-					<li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#features04-w">Servicii</a></li>
-                </ul>
-				<div class="icons-menu">
-					<a class="iconfont-wrapper" href="tel:+40711000000">
-						<span class="p-2 mbr-iconfont mobi-mbri-phone mobi-mbri"></span>
-					</a>
-					<a class="iconfont-wrapper" href="mailto:detirixit@yahoo.com">
-						<span class="p-2 mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
-					</a>
-				</div>
-			</div>
-		</div>
-	</nav>
+    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+      <div class="container">
+        <div class="navbar-brand">
+          <span class="navbar-logo">
+            <a href="index.html">
+              <img src="assets/images/copilot-20260112-232719-96x96.png" alt="Logo Detrix IT" style="height: 3rem;">
+            </a>
+          </span>
+          <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="index.html#top">Detrix IT Company</a></span>
+        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="hamburger">
+            <span></span><span></span><span></span><span></span>
+          </span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav nav-dropdown nav-right">
+            <li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#header05-1">Despre noi</a></li>
+            <li class="nav-item"><a class="nav-link link text-black display-4" href="index.html#features04-w">Servicii</a></li>
+          </ul>
+          <div class="icons-menu">
+            <a class="iconfont-wrapper" href="tel:+40711000000">
+              <span class="p-2 mbr-iconfont mobi-mbri-phone mobi-mbri"></span>
+            </a>
+            <a class="iconfont-wrapper" href="mailto:office@detrix.ro">
+              <span class="p-2 mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </nav>
   </header>
 
-<main>
-  <section class="header5 cid-tJS6uM4N87" id="header05-1" style="padding-top: 5rem;">
-	<div class="container">
-		<div class="row justify-content-center text-center">
-			<div class="col-md-12 col-lg-9">
-				<h1 class="mbr-section-title mbr-fonts-style mb-4 display-1"><strong>Despre noi</strong></h1>
-				<p class="mbr-text mbr-fonts-style mb-4 display-7">Transformăm complexitatea tehnologică în soluții simple și eficiente.</p>
-			</div>
-		</div>
-	</div>
-  </section>
-
-  <section class="people02 cid-v8oDavRntn" id="people02-1v">
-	<div class="container">
-		<div class="row mb-5 justify-content-center text-center">
-			<div class="col-12">
-				<h2 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>Recenzii clienți</strong></h2>
-				<p class="mbr-section-subtitle mbr-fonts-style mb-4 display-7"><strong>Scor: 4,5/5 ★★★★★</strong></p>
-			</div>
-		</div>
-		<div class="row justify-content-center">
-			<div class="item features-without-image col-12 col-md-6 col-lg-4 mb-5">
-				<div class="item-wrapper text-center">
-					<p class="card-title mbr-fonts-style mb-3 display-7">"Profesionalism și rapiditate."</p>
-					<p class="card-text mbr-fonts-style mb-0 display-7"><strong>Elena S.</strong></p>
-				</div>
-			</div>
-		</div>
-	</div>
-  </section>
-
-  <section class="contacts2 map1 cid-tLdYHD757A" id="contacts02-9">
-    <div class="container">
-        <div class="text-center mb-5">
-            <h2 class="mbr-section-title mbr-fonts-style display-2"><strong>Contact</strong></h2>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-12 col-md-5">
-                <h3 class="mbr-section-subtitle mbr-fonts-style mb-2 display-5">Date de contact</h3>
+  <main>
+    <section class="header5 cid
