--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html lang="ro">
 <head>
   <!-- Site made with Mobirise Website Builder v6.1.12, https://mobirise.com -->
   <meta charset="UTF-8">
@@ -23,9 +23,6 @@
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=82VRtS"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=82VRtS" type="text/css">
-
-  
-  
   
 </head>
 <body>
@@ -134,10 +131,6 @@
 </section>
 
 <section data-bs-version="5.1" class="header5 cid-tJS6uM4N87" id="header05-1">
-	
-
-	
-	
 	<div class="topbg"></div>
 	<div class="align-center container">
 		<div class="row justify-content-center">
@@ -156,8 +149,6 @@
 </section>
 
 <section data-bs-version="5.1" class="people03 cid-v8oqKg0WPz" id="people03-1s">
-	
-	
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12 content-head">
