--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 <body>
 
 <section data-bs-version="5.1" class="menu menu2 cid-tJS6tZXiPa" id="menu02-0">
+<h2 class="visually-hidden">Meniu principal</h2>
+
 <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
 <div class="container">
 
@@ -142,6 +144,7 @@
 <section data-bs-version="5.1" class="header5 cid-tJS6uM4N87" id="header05-1">
 <div class="topbg"></div>
 <div class="align-center container">
+
 <div class="row justify-content-center">
 <div class="col-md-12 col-lg-9">
 
@@ -182,7 +185,7 @@ La Detrix IT, transformăm complexitatea tehnologică în soluții simple și ef
 <img src="assets/images/w-3-702x1052.jpeg" alt="fondator">
 </div>
 <div class="item-content align-left">
-<h3 class="item-title mbr-fonts-style display-5"><strong>Deniela Tomșa</strong></h3>
+<h3 class="item-title mbr-fonts-style display-5"><strong>Daniela Tomșa</strong></h3>
 <h4 class="item-subtitle mbr-fonts-style mb-3 display-7"><strong>CEO</strong></h4>
 </div>
 </div>
@@ -215,6 +218,7 @@ La Detrix IT, transformăm complexitatea tehnologică în soluții simple și ef
 </div>
 </div>
 </section>
+
 <section data-bs-version="5.1" class="people03 cid-v8otDhE7Ba" id="people03-1t">
 <div class="container">
 
@@ -267,8 +271,7 @@ La Detrix IT, transformăm complexitatea tehnologică în soluții simple și ef
 </div>
 </div>
 </section>
-
-<section data-bs-version="5.1" class="features4 cid-tMlEXTHLbS" id="features04-w">
+  <section data-bs-version="5.1" class="features4 cid-tMlEXTHLbS" id="features04-w">
 <div class="container">
 
 <div class="row justify-content-center">
@@ -336,7 +339,7 @@ Analizăm infrastructura și oferim strategii digitale pentru optimizarea proces
 <div class="row mb-5 justify-content-center">
 <div class="col-12 content-head">
 <h2 class="mbr-section-title mbr-fonts-style align-center mb-4 display-2"><strong>Recenzii clienți</strong></h2>
-<h4 class="mbr-section-subtitle mbr-fonts-style align-center mb-4 display-7"><strong>Scor: 4,5/5 ★★★★★</strong></h4>
+<h3 class="mbr-section-subtitle mbr-fonts-style align-center mb-4 display-7"><strong>Scor: 4,5/5 ★★★★★</strong></h3>
 </div>
 </div>
 
@@ -351,7 +354,7 @@ Analizăm infrastructura și oferim strategii digitale pentru optimizarea proces
 <span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#FFA600;"></span>
 <span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#FFA600;"></span>
 <span class="mbr-iconfont mobi-mbri-star mobi-mbri"></span>
-<span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#EDEFE B;"></span>
+<span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#EDEFEB;"></span>
 </div>
 
 <h3 class="card-title mbr-fonts-style mb-3 display-7">
@@ -372,7 +375,7 @@ Profesionalism și rapiditate. Site-ul creat de ei a depășit așteptările noa
 <span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#FFA600;"></span>
 <span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#FFA600;"></span>
 <span class="mbr-iconfont mobi-mbri-star mobi-mbri"></span>
-<span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#EDEFE B;"></span>
+<span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#EDEFEB;"></span>
 </div>
 
 <h3 class="card-title mbr-fonts-style mb-3 display-7">
@@ -393,7 +396,7 @@ Profesionalism și rapiditate. Site-ul creat de ei a depășit așteptările noa
 <span class="mbr-iconfont mobi-mbri-star mobi-mbri"></span>
 <span class="mbr-iconfont mobi-mbri-star mobi-mbri"></span>
 <span class="mbr-iconfont mobi-mbri-star mobi-mbri"></span>
-<span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#EDEFE B;"></span>
+<span class="mbr-iconfont mobi-mbri-star mobi-mbri" style="color:#EDEFEB;"></span>
 </div>
 
 <h3 class="card-title mbr-fonts-style mb-3 display-7">
@@ -561,7 +564,7 @@ O incursiune vizuală în proiectele și mediul nostru de lucru.
 
 <h2 class="mbr-section-title align-center mb-5 mbr-fonts-style display-5">
 <strong>Urmărește-ne</strong><br>
-<strong>Contact: 0711 000 000 | office@detrix.ro</strong>
+<strong>Contact: 0711 000 000 | detirixit@yahoo.com</strong>
 </h2>
 
 <div class="social-list align-center">
@@ -590,6 +593,7 @@ O incursiune vizuală în proiectele și mediul nostru de lucru.
 </section>
 
 <section data-bs-version="5.1" class="footer4 cid-v8ox6pRnFh" id="footer04-1u">
+<h2 class="visually-hidden">Footer</h2>
 <div class="container">
 <div class="media-container-row align-center mbr-white">
 <div class="col-12">
@@ -602,10 +606,14 @@ O incursiune vizuală în proiectele și mediul nostru de lucru.
 </section>
 
 <section class="display-7" style="padding:0;align-items:center;justify-content:center;flex-wrap:wrap;align-content:center;display:flex;position:relative;height:4rem;">
+<h2 class="visually-hidden">Credit Mobirise</h2>
+
 <a href="https://mobiri.se/4423692" style="flex:1 1;height:4rem;position:absolute;width:100%;z-index:1;">
 <img alt="" style="height:4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==">
 </a>
+
 <p style="margin:0;text-align:center;" class="display-7">&#8204;</p>
+
 <a style="z-index:1" href="https://mobirise.com">Mobirise.com</a>
 </section>
 
