--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 
 <body>
 
-<section data-bs-version="5.1" class="menu menu2 cid-tJS6tZXiPa" id="menu02-0">
-<h2 class="visually-hidden">Meniu principal</h2>
+<div data-bs-version="5.1" class="menu menu2 cid-tJS6tZXiPa" id="menu02-0">
 
 <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
 <div class="container">
@@ -84,7 +83,8 @@
 </div>
 </div>
 </nav>
-</section>
+
+</div>
 <section data-bs-version="5.1" class="slider3 cid-v87WU2ZEMR" id="slider03-1i">
 <div class="carousel slide carousel-fade" id="v8oTudkLWi" data-bs-ride="carousel" data-bs-interval="6000">
 
@@ -557,14 +557,14 @@ O incursiune vizuală în proiectele și mediul nostru de lucru.
 </div>
 </div>
 </section>
-<section data-bs-version="5.1" class="social4 cid-v8mM0YgybL" id="social04-1r">
+<div data-bs-version="5.1" class="social4 cid-v8mM0YgybL" id="social04-1r">
 <div class="container">
 <div class="media-container-row">
 <div class="col-12">
 
 <h2 class="mbr-section-title align-center mb-5 mbr-fonts-style display-5">
 <strong>Urmărește-ne</strong><br>
-<strong>Contact: 0711 000 000 | detirixit@yahoo.com</strong>
+<strong>Contact: 0711 000 000 |  detirixit@yahoo.com</strong>
 </h2>
 
 <div class="social-list align-center">
@@ -590,10 +590,9 @@ O incursiune vizuală în proiectele și mediul nostru de lucru.
 </div>
 </div>
 </div>
-</section>
+</div>
 
-<section data-bs-version="5.1" class="footer4 cid-v8ox6pRnFh" id="footer04-1u">
-<h2 class="visually-hidden">Footer</h2>
+<div data-bs-version="5.1" class="footer4 cid-v8ox6pRnFh" id="footer04-1u">
 <div class="container">
 <div class="media-container-row align-center mbr-white">
 <div class="col-12">
@@ -603,10 +602,9 @@ O incursiune vizuală în proiectele și mediul nostru de lucru.
 </div>
 </div>
 </div>
-</section>
+</div>
 
-<section class="display-7" style="padding:0;align-items:center;justify-content:center;flex-wrap:wrap;align-content:center;display:flex;position:relative;height:4rem;">
-<h2 class="visually-hidden">Credit Mobirise</h2>
+<div class="display-7" style="padding:0;align-items:center;justify-content:center;flex-wrap:wrap;align-content:center;display:flex;position:relative;height:4rem;">
 
 <a href="https://mobiri.se/4423692" style="flex:1 1;height:4rem;position:absolute;width:100%;z-index:1;">
 <img alt="" style="height:4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==">
@@ -615,7 +613,7 @@ O incursiune vizuală în proiectele și mediul nostru de lucru.
 <p style="margin:0;text-align:center;" class="display-7">&#8204;</p>
 
 <a style="z-index:1" href="https://mobirise.com">Mobirise.com</a>
-</section>
+</div>
 
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/smoothscroll/smooth-scroll.js"></script>
