--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <a class="nav-link link text-black display-4" href="index.html#features04-w">Servicii</a>
 </li>
 <li class="nav-item">
-<a class="nav-link link text-black text-primary display-4" href="#contacts02-9">Contact</a>
+<a class="nav-link link text-black text-primary display-4" href="index.html#contacts02-9">Contact</a>
 
 </li>
 </ul>
