--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
 <body>
 
+
+
 <div data-bs-version="5.1" class="menu menu2 cid-tJS6tZXiPa" id="menu02-0">
 
 <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
@@ -55,16 +57,19 @@
 
 <div class="collapse navbar-collapse" id="navbarSupportedContent">
 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-<li class="nav-item">
-<a class="nav-link link text-black display-4" href="index.html#header05-1">Despre noi</a>
-</li>
-<li class="nav-item">
-<a class="nav-link link text-black display-4" href="index.html#features04-w">Servicii</a>
-</li>
-<li class="nav-item">
-<a class="nav-link link text-black text-primary display-4" href="index.html#contacts02-9">Contact</a>
 
+<li class="nav-item">
+<a class="nav-link link text-black display-4" href="#header05-1">Despre noi</a>
 </li>
+
+<li class="nav-item">
+<a class="nav-link link text-black display-4" href="#features04-w">Servicii</a>
+</li>
+
+<li class="nav-item">
+<a class="nav-link link text-black text-primary display-4" href="#contacts02-9">Contact</a>
+</li>
+
 </ul>
 
 <div class="icons-menu">
@@ -86,6 +91,7 @@
 </nav>
 
 </div>
+
 <section data-bs-version="5.1" class="slider3 cid-v87WU2ZEMR" id="slider03-1i">
 <div class="carousel slide carousel-fade" id="v8oTudkLWi" data-bs-ride="carousel" data-bs-interval="6000">
 
