--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 </li>
 
 <li class="nav-item">
-<a class="nav-link link text-black text-primary display-4" href="page1.html#contacts02-9">Contact</a>
+<a href="page1.html#contacts02-9">Contact</a>
+
 
 </li>
 
